# microservices-rust

./: Cargo.toml
hyper-microservice/: Cargo.toml
hyper-microservice-rest/: Cargo.toml
hyper-microservice-rest-regex/: Cargo.toml
hyper-microservice-rest-regex/src/: main.rs
hyper-microservice-rest/src/: main.rs
hyper-microservice-with-handlers/: Cargo.toml
hyper-microservice-with-handlers/src/: main.rs
