[package]
name = "hyper-microservice-rest-regex"
version = "0.1.0"
authors = ["abdullah <44318011+fx2y@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.4"
regex = "1.3"